# LearnGit

./: .gitignore  CMakeLists.txt  readme.txt  readme2.txt
src/: CMakeLists.txt  eventMutexFunc.cpp  eventMutexFunc.h  readme.txt  shareMemFunc.cpp  shareMemFunc.h  utilToolsComm.h  utilToolsDef.h
src/ArchiveAlgorithm/: CMakeLists.txt  JsonArchiveAlgorithm.h
src/ArchiveAlgorithm/test/: CMakeLists.txt  JsonArchiveTest.cpp  main.cpp
test/: CMakeLists.txt  eventmutexTest.cpp
